small template fix by fukawi2++

--- a/cgi/template/index.tmpl
+++ b/cgi/template/index.tmpl
@@ -11,7 +11,7 @@
 <body>
     <h1>Index of IRC logs</h1>
 
-    <p><a href="/search.pl">Search the logs</a></p>
+    <p><a href="<TMPL_VAR NAME=BASE_URL>/search.pl">Search the logs</a></p>
 
 	<h2>Channels</h2>
 
