link to cross-referenced parrot and rakudo sources

--- a/cgi/channels/perl6.tmpl
+++ b/cgi/channels/perl6.tmpl
@@ -2,4 +2,6 @@
   | <a href="http://www.rakudo.org/">Rakudo</a>
   | <a href="http://perlcabal.org/syn/">Specs</a>
   | <a href="http://www.parrot.org/">Parrot</a>
+  | <a href="http://www.slimies.de/raxref-parrot_rakudo.html">source cross
+  referenced</a>
 </p>
